tests/lean/terminationFailure.lean.expected.out
terminationFailure.lean:7:2-7:3: error: fail to show termination for
  f.g
  f
with errors
structural recursion does not handle mutually recursive functions

'termination_by' modifier missing
f : Nat → Nat
f.g : Nat → Nat
1
2
terminationFailure.lean:20:4-20:5: error: fail to show termination for
  h
with errors
argument #1 was not used for structural recursion
  failed to eliminate recursive application
    h x

structural recursion cannot be used

'termination_by' modifier missing
h : Nat → Foo
Foo.a
